# casper-wasm-utils

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: publish-to-crates.yml
cli/: gas.rs  stack_height.rs
examples/: opt_imports.rs
src/: ext.rs  gas.rs  graph.rs  lib.rs  logger.rs  optimizer.rs  ref_list.rs  rules.rs  stack_height.rs  symbols.rs
src/gas/: validation.rs
src/stack_height/: max_height.rs  thunk.rs
tests/: diff.rs
