[package]
name = "casper-wasm-utils"
version = "0.1.0"
edition = "2021"
rust-version = "1.56.1"
authors = ["Nikolay Volf <nikvolf@gmail.com>", "Sergey Pepyakin <s.pepyakin@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Collection of command-line utilities and corresponding Rust api for producing pwasm-compatible executables"
keywords = ["wasm", "webassembly", "pwasm"]
repository = "https://github.com/paritytech/wasm-utils"
include = ["src/**/*", "LICENSE-*", "README.md", "cli/**/*"]

[[bin]]
name = "wasm-gas"
path = "cli/gas.rs"
required-features = ["cli"]

[[bin]]
name = "wasm-stack-height"
path = "cli/stack_height.rs"
required-features = ["cli"]

[dependencies]
byteorder = { version = "1", default-features = false }
log = { version = "0.4", default-features = false }
parity-wasm = { version = "0.41", default-features = false }

# Dependencies only used by the binaries
env_logger = { version = "0.9", optional = true }

[dev-dependencies]
binaryen = "0.12"
diff = "0.1"
indoc = "1"
rand = "0.8"
wabt = "0.10"

[features]
default = ["std"]
std = ["parity-wasm/std", "log/std", "byteorder/std"]
cli = [
  "std",
  "env_logger",
]
