[package]
name = "casper-wasm-utils"
version = "3.0.0"
edition = "2021"
rust-version = "1.56.1"
authors = ["Nikolay Volf <nikvolf@gmail.com>", "Sergey Pepyakin <s.pepyakin@gmail.com>", "Félix Daudré-Vignier <felix@casperlabs.io>", "Michał Papierski <michal@casperlabs.io>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Collection of command-line utilities and corresponding Rust api for producing pwasm-compatible executables"
keywords = ["wasm", "webassembly", "pwasm"]
repository = "https://github.com/casper-network/casper-wasm-utils"
include = ["src/**/*", "LICENSE-*", "README.md", "cli/**/*"]

[[bin]]
name = "wasm-gas"
path = "cli/gas.rs"
required-features = ["cli"]

[[bin]]
name = "wasm-stack-height"
path = "cli/stack_height.rs"
required-features = ["cli"]

[dependencies]
byteorder = { version = "1", default-features = false }
log = { version = "0.4", default-features = false }
casper-wasm = { git = "https://github.com/igor-casper/casper-wasm.git", branch = "core-78", default-features = false }

# Dependencies only used by the binaries
clap = { version = "2", optional = true }
env_logger = { version = "0.9", optional = true }
glob = { version = "0.3", optional = true }
lazy_static = { version = "1", optional = true }

[dev-dependencies]
binaryen = "0.12"
diff = "0.1"
indoc = "1"
rand = "0.8"
tempdir = "0.3"
wabt = "0.10"

[features]
default = ["std"]
std = ["casper-wasm/std", "log/std", "byteorder/std"]
cli = [
  "std",
  "glob",
  "clap",
  "env_logger",
  "lazy_static",
]
sign_ext = ["casper-wasm/sign_ext"]
call_indirect_overlong = ["casper-wasm/call_indirect_overlong"]
